# livecodebench

./: .gitignore  README.md  pyproject.toml  setup.cfg
livecodebench/: __init__.py  evaluate.py
livecodebench copy/benchmarks/: __init__.py  code_generation.py
livecodebench copy/evaluation/: testing_util.py
livecodebench/benchmarks/: __init__.py  code_generation.py
livecodebench/evaluation/: __init__.py  code_generation_metrics.py  compute_code_generation_metrics.py  compute_scores.py  testing_util.py  utils_execute.py
livecodebench/utils/: path_utils.py
tests/: test_check_correctness.py
