[metadata]
name = livecodebench
description = "Evaluation package for LiveCodeBench"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wasiahmad/livecodebench
license = MIT
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.10
dependency_links =
install_requires =
    numpy
    annotated-types>=0.7.0