[metadata]
name = livecodebench
description = "Evaluation package for LiveCodeBench"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wasiahmad/livecodebench
license = MIT
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.10
install_requires =
    annotated-types>=0.7.0
    datasets>=3.2.0, <4.0